--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <!-- SwiperのCSSをnode_modulesから読み込む -->
     <link rel="stylesheet" href="node_modules/swiper/swiper-bundle.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="images/top_logo_0134b08のコピー.png" sizes="48x48" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<meta name="apple-mobile-web-app-title" content="GOMANGOKU | 愛知県岡崎市の家具・インテリアショップ" />
+<link rel="manifest" href="/site.webmanifest" />
 </head>
 <body>
   <body>
@@ -38,6 +44,11 @@
               <li class="nav-item" id="item"><a href="#about us" class="nav-link">ABOUT US</a></li>
               <li class="nav-item" id="item">
                 <a href="#online store" class="nav-link">ONLINE STORE</a>
+                <div class="rigth-svg-icon" >
+                  <svg aria-hidden="true" focusable="false" fill="none" width="12" viewBox="0 0 10 10">
+                    <path d="m3 9 4-4-4-4" stroke="currentColor" stroke-linecap="square"></path>
+                  </svg>
+                </div>
                 <!-- サブメニュー -->
                 <div class="dropdown">
                   <div class="footer-contair1">
@@ -80,13 +91,20 @@
               <li class="nav-item" id="item"><a href="#media" class="nav-link">MEDIA</a></li>
               <li class="nav-item" id="item"><a href="#journal" class="nav-link">JOURNAL</a></li>
               <li class="nav-item" id="item"><a href="#contact" class="nav-link" id="last-link">CONTACT</a></li>
+              <li class="nav-item" class="accunt-iocn" id="item">               <svg aria-hidden="true" fill="none" focusable="false" width="16" viewBox="0 0 20 20">
+                <path d="M16.125 8.75c-.184 2.478-2.063 4.5-4.125 4.5s-3.944-2.021-4.125-4.5c-.187-2.578 1.64-4.5 4.125-4.5 2.484 0 4.313 1.969 4.125 4.5Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                <path d="M3.017 20.747C3.783 16.5 7.922 14.25 12 14.25s8.217 2.25 8.984 6.497" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10"></path>
+              </svg>
+              <a href="#cart" class="nav-link">アカウント</a></li>
             </ul>
           </nav>
           <div class="icon">
-            <svg aria-hidden="true" fill="none" focusable="false" width="24" viewBox="0 0 24 24">
-              <path d="M16.125 8.75c-.184 2.478-2.063 4.5-4.125 4.5s-3.944-2.021-4.125-4.5c-.187-2.578 1.64-4.5 4.125-4.5 2.484 0 4.313 1.969 4.125 4.5Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-              <path d="M3.017 20.747C3.783 16.5 7.922 14.25 12 14.25s8.217 2.25 8.984 6.497" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10"></path>
-            </svg>
+            <div class="accunt-iocn">
+              <svg aria-hidden="true" fill="none" focusable="false" width="24" viewBox="0 0 24 24">
+                <path d="M16.125 8.75c-.184 2.478-2.063 4.5-4.125 4.5s-3.944-2.021-4.125-4.5c-.187-2.578 1.64-4.5 4.125-4.5 2.484 0 4.313 1.969 4.125 4.5Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                <path d="M3.017 20.747C3.783 16.5 7.922 14.25 12 14.25s8.217 2.25 8.984 6.497" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10"></path>
+              </svg>
+            </div>
             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" width="23" height="23" color="#000000">
               <defs>
                 <style>
@@ -168,22 +186,22 @@
               <div class="swiper-slide">
                 <!-- デフォルトの画像セット（初期表示のみ） -->
                 <div class="image-container default-set" data-set="default">
-                  <img src="images/collection1-1.png" alt="collection1-1" class="collection-img">
-                  <img src="images/collection1-2.jpg" alt="collection1-2" class="hover-img">
+                  <img src="images/collection1-1.png" alt="collection1-1" class="collection-img" style="width: 100%; height: auto; object-fit: cover;">
+                  <img src="images/collection1-2.jpg" alt="collection1-2" class="hover-img" style="width: 100%; height: auto; object-fit: cover;">
                   <div class="square-container">
                     <span class="dli-plus"></span>
                   </div>
                 </div>
                 <div class="image-container" data-set="1"> <!-- 1番目のセット -->
-                  <img src="images/collection1-WH.png" alt="collection1-WH" class="collection-img">
-                  <img src="images/collection1-WH-2.jpg" alt="collection1-WH-2" class="hover-img">
+                  <img src="images/collection1-WH.png" alt="collection1-WH" class="collection-img" style="width: 100%; height: auto; object-fit: cover;">
+                  <img src="images/collection1-WH-2.jpg" alt="collection1-WH-2" class="hover-img" style="width: auto; height: 100%; object-fit: cover;">
                   <div class="square-container">
                     <span class="dli-plus"></span>
                   </div>
                 </div>
                 <div class="image-container" data-set="2"> <!-- 2番目のセット -->
-                  <img src="images/collection1-BW.png" alt="collection1-BW" class="collection-img">
-                  <img src="images/collection1-WH.png" alt="collection1-WH" class="hover-img">
+                  <img src="images/collection1-BW.png" alt="collection1-BW" class="collection-img" style="width: 100%; height: auto; object-fit: cover;">
+                  <img src="images/collection1-WH.png" alt="collection1-WH" class="hover-img" style="width: 100%; height: auto; object-fit: cover;">
                   <div class="square-container">
                     <span class="dli-plus"></span>
                   </div>
@@ -206,22 +224,22 @@
               <div class="swiper-slide">
                 <!-- デフォルトの画像セット（初期表示のみ） -->
                 <div class="image-container default-set" data-set="default">
-                  <img src="images/collection2-1.png" alt="collection2-1" class="collection-img">
-                  <img src="images/collection2-2.jpg" alt="collection2-2" class="hover-img">
+                  <img src="images/collection2-1.png" alt="collection2-1" class="collection-img" style="width: 100%; height: auto; object-fit: cover;">
+                  <img src="images/collection2-2.jpg" alt="collection2-2" class="hover-img" style="width: auto; height: 100%; object-fit: cover;">
                   <div class="square-container">
                     <span class="dli-plus"></span>
                   </div>
                 </div>
                 <div class="image-container" data-set="1"> <!-- 1番目のセット -->
-                  <img src="images/collection2-WH.png" alt="collection2-WH" class="collection-img">
-                  <img src="images/collection2-BW.png" alt="collection2-BW" class="hover-img">
+                  <img src="images/collection2-WH.png" alt="collection2-WH" class="collection-img" style="width: 100%; height: auto; object-fit: cover;">
+                  <img src="images/collection2-BW.png" alt="collection2-BW" class="hover-img" style="width: 100%; height: auto; object-fit: cover;">
                   <div class="square-container">
                     <span class="dli-plus"></span>
                   </div>
                 </div>
                 <div class="image-container" data-set="2"> <!-- 2番目のセット -->
-                  <img src="images/collection2-BW.png" alt="collection2-BW" class="collection-img">
-                  <img src="images/collection2-2.jpg" alt="collection2-2" class="hover-img">
+                  <img src="images/collection2-BW.png" alt="collection2-BW" class="collection-img" style="width: 100%; height: auto; object-fit: cover;">
+                  <img src="images/collection2-2.jpg" alt="collection2-2" class="hover-img" style="width: auto; height: 100%; object-fit: cover;">
                   <div class="square-container">
                     <span class="dli-plus"></span>
                   </div>
@@ -244,22 +262,22 @@
               <div class="swiper-slide">
                 <!-- デフォルトの画像セット（初期表示のみ） -->
                 <div class="image-container default-set" data-set="default">
-                  <img src="images/collection3-1.png" alt="collection3-1" class="collection-img">
-                  <img src="images/collection3-2.jpg" alt="collection3-2" class="hover-img">
+                  <img src="images/collection3-1.png" alt="collection3-1" class="collection-img" style="width: 100%; height: auto; object-fit: cover;">
+                  <img src="images/collection3-2.jpg" alt="collection3-2" class="hover-img" style="width: auto; height: 100%; object-fit: cover;">
                   <div class="square-container">
                     <span class="dli-plus"></span>
                   </div>
                 </div>
                 <div class="image-container" data-set="1"> <!-- 1番目のセット -->
-                  <img src="images/collection3-CL.png" alt="collection3-CL" class="collection-img">
-                  <img src="images/collection3-BN.png" alt="collection3-BN" class="hover-img">
+                  <img src="images/collection3-CL.png" alt="collection3-CL" class="collection-img" style="width: 100%; height: auto; object-fit: cover;">
+                  <img src="images/collection3-BN.png" alt="collection3-BN" class="hover-img" style="width: 100%; height: auto; object-fit: cover;">
                   <div class="square-container">
                     <span class="dli-plus"></span>
                   </div>
                 </div>
                 <div class="image-container" data-set="2"> <!-- 2番目のセット -->
-                  <img src="images/collection3-BN.png" alt="collection3-BN" class="collection-img">
-                  <img src="images/collection3-CL.png" alt="collection3-CL" class="hover-img">
+                  <img src="images/collection3-BN.png" alt="collection3-BN" class="collection-img" style="width: 100%; height: auto; object-fit: cover;">
+                  <img src="images/collection3-CL.png" alt="collection3-CL" class="hover-img" style="width: 100%; height: auto; object-fit: cover;">
                   <div class="square-container">
                     <span class="dli-plus"></span>
                   </div>
@@ -282,8 +300,8 @@
               <div class="swiper-slide">
                 <!-- デフォルトの画像セット（初期表示のみ） -->
                 <div class="image-container default-set" data-set="default">
-                  <img src="images/collection4-1.png" alt="collection4-1" class="collection-img">
-                  <img src="images/collection4-2.jpg" alt="collection4-2" class="hover-img">
+                  <img src="images/collection4-1.png" alt="collection4-1" class="collection-img" style="width: 100%; height: auto; object-fit: cover;">
+                  <img src="images/collection4-2.jpg" alt="collection4-2" class="hover-img" style="width: 100%; height: auto; object-fit: cover;">
                   <div class="square-container">
                     <span class="dli-plus"></span>
                   </div>
@@ -298,8 +316,8 @@
               <div class="swiper-slide">
                 <!-- デフォルトの画像セット（初期表示のみ） -->
                 <div class="image-container default-set" data-set="default">
-                  <img src="images/collection5-1.png" alt="collection5-1" class="collection-img">
-                  <img src="images/collection5-2.jpg" alt="collection5-2" class="hover-img">
+                  <img src="images/collection5-1.png" alt="collection5-1" class="collection-img" style="width: 100%; height: auto; object-fit: cover;">
+                  <img src="images/collection5-2.jpg" alt="collection5-2" class="hover-img" style="width: 100%; height: auto; object-fit: cover;">
                   <div class="square-container">
                     <span class="dli-plus"></span>
                   </div>
@@ -314,8 +332,8 @@
               <div class="swiper-slide">
                 <!-- デフォルトの画像セット（初期表示のみ） -->
                 <div class="image-container default-set" data-set="default">
-                  <img src="images/collection6-1.png" alt="collection6-1" class="collection-img">
-                  <img src="images/collection6-2.jpg" alt="collection6-2" class="hover-img">
+                  <img src="images/collection6-1.png" alt="collection6-1" class="collection-img" style="width: 100%; height: auto; object-fit: cover;">
+                  <img src="images/collection6-2.jpg" alt="collection6-2" class="hover-img" style="width: 100%; height: auto; object-fit: cover;">
                   <div class="square-container">
                     <span class="dli-plus"></span>
                   </div>
@@ -330,29 +348,29 @@
               <div class="swiper-slide">
                 <!-- デフォルトの画像セット（初期表示のみ） -->
                 <div class="image-container default-set" data-set="default">
-                  <img src="images/collection7-1.jpg" alt="collection7-1" class="collection-img">
-                  <img src="images/collection7-2.png" alt="collection7-2" class="hover-img">
+                  <img src="images/collection7-1.jpg" alt="collection7-1" class="collection-img" style="width: 100%; height: auto; object-fit: cover;">
+                  <img src="images/collection7-2.png" alt="collection7-2" class="hover-img" style="width: 100%; height: auto; object-fit: cover;">
                   <div class="square-container">
                     <span class="dli-plus"></span>
                   </div>
                 </div>
                 <div class="image-container" data-set="1"> <!-- 1番目のセット -->
-                  <img src="images/collection7-LG.jpg" alt="collection7-LG" class="collection-img">
-                  <img src="images/collection7-LG-2.png" alt="collection7-LG-2" class="hover-img">
+                  <img src="images/collection7-LG.jpg" alt="collection7-LG" class="collection-img" style="width: 100%; height: auto; object-fit: cover;">
+                  <img src="images/collection7-LG-2.png" alt="collection7-LG-2" class="hover-img" style="width: 100%; height: auto; object-fit: cover;">
                   <div class="square-container">
                     <span class="dli-plus"></span>
                   </div>
                 </div>
                 <div class="image-container" data-set="2"> <!-- 2番目のセット -->
-                  <img src="images/collection7-OB.png" alt="collection7-OB" class="collection-img">
-                  <img src="images/collection7-OB-2.png" alt="collection7-OB-2" class="hover-img">
+                  <img src="images/collection7-OB.png" alt="collection7-OB" class="collection-img" style="width: 100%; height: auto; object-fit: cover;">
+                  <img src="images/collection7-OB-2.png" alt="collection7-OB-2" class="hover-img" style="width: 100%; height: auto; object-fit: cover;">
                   <div class="square-container">
                     <span class="dli-plus"></span>
                   </div>
                 </div>
                 <div class="image-container" data-set="3"> <!-- 3番目のセット -->
-                  <img src="images/collection7-AB.png" alt="collection7-AB" class="collection-img">
-                  <img src="images/collection7-AB-2.png" alt="collection7-AB-2" class="hover-img">
+                  <img src="images/collection7-AB.png" alt="collection7-AB" class="collection-img" style="width: 100%; height: auto; object-fit: cover;">
+                  <img src="images/collection7-AB-2.png" alt="collection7-AB-2" class="hover-img" style="width: 100%; height: auto; object-fit: cover;">
                   <div class="square-container">
                     <span class="dli-plus"></span>
                   </div>
@@ -378,8 +396,8 @@
               <div class="swiper-slide">
                 <!-- デフォルトの画像セット（初期表示のみ） -->
                 <div class="image-container default-set" data-set="default">
-                  <img src="images/collection8-1.png" alt="collection8-1" class="collection-img">
-                  <img src="images/collection8-2.jpg" alt="collection8-2" class="hover-img">
+                  <img src="images/collection8-1.png" alt="collection8-1" class="collection-img" style="width: 100%; height: auto; object-fit: cover;">
+                  <img src="images/collection8-2.jpg" alt="collection8-2" class="hover-img" style="width: 100%; height: auto; object-fit: cover;">
                   <div class="square-container">
                     <span class="dli-plus"></span>
                   </div>
@@ -448,6 +466,8 @@
           </div>
           <div class="news-list">
             <div class="news-item">
+            </div>
+            <div class="news-item">
               <img src="images/francebed_0921_0922.png" alt="news-img-1" class="news-img">
               <a href="#news" class="news-category">NEWS</a>
               <p class="news-title">FRANCE BED | PR STUDIO TOYOTA</p>
@@ -477,7 +497,7 @@
         <div class="container">
           <div class="section-title">
             <p>STYLING BY GOMANGOKU</p>
-            <h2>JOURNAL</h2>
+            <h1>JOURNAL</h1>
           </div>
           <div class="journal-img-containar">
             <div class="journal-img-area">
@@ -494,7 +514,7 @@
             </div>
           </div>
           <div class="video-area">
-            <video controls class="video" id="myVideo">
+            <video controls loop muted class="video" id="myVideo">
               <source src="images/7f0f711ef4c549b5af97cd41e5d482a2.HD-1080p-7.2Mbps-14043577.mp4" type="video/mp4">
               お使いのブラウザは動画を再生できません。
             </video>
@@ -511,7 +531,7 @@
         <div class="container">
           <div class="section-title">
             <p>Follow Us</p>
-            <h2>Instagram</h2>
+            <h1>Instagram</h1>
           </div>
           <div class="instagram-gallery">
             <!-- 各画像を独立した instagram-post として分ける -->
