--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="css/style.min.css">
     <!-- SwiperのCSSをnode_modulesから読み込む -->
     <link rel="stylesheet" href="node_modules/swiper/swiper-bundle.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" href="images/top_logo_0134b08のコピー.png" sizes="48x48" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="images/top_logo_0134b08.png" sizes="48x48" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="shortcut icon" href="/favicon.ico" />
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
@@ -23,12 +23,14 @@
     <header class="site-header">
       <div class="container">
         <div class="header-top">
-          <p>雑貨15,00円以上で送料無料</p>
+          <p>雑貨15,000円以上で送料無料</p>
         </div>
         <div class="header-bottom">
           <!-- ハンバーガーメニュー -->
           <div class="hamburger">
-            <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" width="24" height="24" color="#000000"><defs><style>.cls-6374f8d9b67f094e4896c63e-1{fill:none;stroke:currentColor;stroke-miterlimit:10;}</style></defs><line class="cls-6374f8d9b67f094e4896c63e-1" x1="0.5" y1="2.42" x2="23.5" y2="2.42"></line><line class="cls-6374f8d9b67f094e4896c63e-1" x1="0.5" y1="12" x2="23.5" y2="12"></line><line class="cls-6374f8d9b67f094e4896c63e-1" x1="0.5" y1="21.58" x2="23.5" y2="21.58"></line></svg>
+            <svg aria-hidden="true" fill="none" focusable="false" width="24" viewBox="0 0 24 24">
+              <path d="M1 19h22M1 12h22M1 5h22" stroke="currentColor" stroke-width="1.5" stroke-linecap="square"></path>
+            </svg>
           </div>
           <div class="header-logo">
             <a href="index.html">
@@ -37,8 +39,11 @@
           </div>
           <!-- ナビゲーションメニュー -->
           <nav class="site-nav" id="nav">
-            <div class="close-button" id="closeButton">
-            </div>
+              <div class="close-button" id="closeButton">
+                <svg aria-hidden="true" focusable="false" fill="none" width="16" class="icon icon-close" viewBox="0 0 16 16">
+                  <path d="m1 1 14 14M1 15 15 1" stroke="currentColor" stroke-width="1.5"></path>
+                </svg>
+              </div>
             <ul class="nav-list">
               <li class="nav-item" id="item"><a href="#home" class="nav-link">HOME</a></li>
               <li class="nav-item" id="item"><a href="#about us" class="nav-link">ABOUT US</a></li>
@@ -91,7 +96,8 @@
               <li class="nav-item" id="item"><a href="#media" class="nav-link">MEDIA</a></li>
               <li class="nav-item" id="item"><a href="#journal" class="nav-link">JOURNAL</a></li>
               <li class="nav-item" id="item"><a href="#contact" class="nav-link" id="last-link">CONTACT</a></li>
-              <li class="nav-item" class="accunt-iocn" id="item">               <svg aria-hidden="true" fill="none" focusable="false" width="16" viewBox="0 0 20 20">
+              <li class="nav-item" class="accunt-iocn" id="item">
+                <svg aria-hidden="true" fill="none" focusable="false" width="20" viewBox="0 0 24 24">
                 <path d="M16.125 8.75c-.184 2.478-2.063 4.5-4.125 4.5s-3.944-2.021-4.125-4.5c-.187-2.578 1.64-4.5 4.125-4.5 2.484 0 4.313 1.969 4.125 4.5Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                 <path d="M3.017 20.747C3.783 16.5 7.922 14.25 12 14.25s8.217 2.25 8.984 6.497" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10"></path>
               </svg>
@@ -105,18 +111,9 @@
                 <path d="M3.017 20.747C3.783 16.5 7.922 14.25 12 14.25s8.217 2.25 8.984 6.497" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10"></path>
               </svg>
             </div>
-            <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" width="23" height="23" color="#000000">
-              <defs>
-                <style>
-                  .cls-6374f8d9b67f094e4896c660-1 {
-                    fill: none;
-                    stroke: currentColor;
-                    stroke-miterlimit: 10;
-                  }
-                </style>
-              </defs>
-              <circle class="cls-6374f8d9b67f094e4896c660-1" cx="9.14" cy="9.14" r="7.64"></circle>
-              <line class="cls-6374f8d9b67f094e4896c660-1" x1="22.5" y1="22.5" x2="14.39" y2="14.39"></line>
+            <svg aria-hidden="true" fill="none" focusable="false" width="24" viewBox="0 0 24 24">
+              <path d="M10.364 3a7.364 7.364 0 1 0 0 14.727 7.364 7.364 0 0 0 0-14.727Z" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10"></path>
+              <path d="M15.857 15.858 21 21.001" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"></path>
             </svg>
             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" width="23" height="23" color="#000000">
               <defs>
@@ -763,7 +760,7 @@
           </svg>
         </div>
         <div class="footer-text">
-          <p>© 2024 - GOMANGOKU</p>
+          <p> © 2024 - GOMANGOKU </p>
         </div>
       </div>
     </footer>
